# NURBSsurface-function

./: .gitmodules  CMakeLists.txt  NURBSParaboloid.h  NURBSsurface.h  README.md
.github/workflows/: ci.yml
cmake/: FindGLM.cmake
src/: NURBSParaboloid.h  NURBSsurface.h  implementation.cpp
